Version 0.9.49   unreleased

    * Bump up to CedarBuild v0.8.17 to get Cucumber-related bug fix.

Version 0.9.48   09 Jun 2015

    * Add SantaExchangeStyles.NO_WRAP_STYLE and associated CSS in SantaExchange.css.
    * Add new unit test class RpcInterfaceTest to check that RPCs implement the proper interface.
    * Bump up to CedarBuild v0.8.16 to get Cucumber-related improvements.
    * Make the Cucumber headless test runner shutdown process more robust.
    * Pull out Ruby gem versions into cucumber.properties, to make Jenkins builds easier.

Version 0.9.47   18 Mar 2015

    * Fix tests that broke when I made the BitBucket homepage point at the wiki.

Version 0.9.46   17 Mar 2015

    * Bump up to AppEngine v1.9.18 just to stay up-to-date.
    * Bump up to CedarBuild v0.8.14 and CedarCommon v5.2.1.
    * Adjust build.gradle now that CedarCommon is distributed at Maven Central.
    * Other minor adjustments to code and docs now that projects is at BitBucket.

Version 0.9.45   01 Feb 2015

    * Convert from AppEngine's federated login mechanism to the Google Account login mechanism.
    * Bump up to CedarCommon v5.1.0 to get support for Google Accounts authentication.
    * Bump up to AppEngine v1.9.17 just to stay up-to-date.

Version 0.9.44   10 Jan 2015

    * Use common event handler classes from CedarCommon in a few places.
    * Start phasing out OpenId logins, since Google will be removing the federated login mechanism.
    * Remove OpenId login option for AOL, MySpace, and myOpenId, since there are no existing users.
    * Change the login selector to remind Yahoo users that their access will be removed February 1.

Version 0.9.43   01 Dec 2014

    * Upgrade from GWT 2.7.0-RC1 to the official GWT 2.7.0 release.
    * Bump up to CedarCommon v5.0.2 to take advantage of Assertions.assertListEquals().
    * Change gradle build process to generate a working Eclipse launch config with -nosuperDevMode.