@@ -18,6 +18,10 @@
 # Allowed values: default, ie
 config_capybaraSeleniumBrowser=default
 
+# Path to the browser to use
+# Leave this unset to get the default path, override to get a specific browser (i.e. portable Firefox)
+config_capybaraSeleniumBrowserPath=
+
 # Host that we're testing against, like "http://localhost:8888"
 # When testing with Internet Explorer, you need localhost (not 127.0.0.1), so you get a trusted zone
 config_appHost=http://localhost:8888
